Add Store user in database
